<resources>
    <string name="app_name">Cultoura</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Never Miss Out on events and discounts</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>


    <string name="default_notification_channel_id">projemanag_notification_channel_id</string>
    <string name="nav_plan_now">Plan Now!</string>
    <string name="nav_my_itineraries">My Itineraries</string>
    <string name="no_plans_found">No plans found!</string>
    <string name="create_your_plan">Create Your Plan</string>
    <string name="tell_us_what_you_are_looking_for">Tell us what you\'re looking for, and we\'ll create the perfect itinerary for you.</string>
    <string name="step_3">STEP 3</string>
    <string name="what_s_your_budget">What\'s your budget?</string>
    <string name="budget_amount">Budget amount</string>
    <string name="back">Back</string>
    <string name="create_itinerary">Create Itinerary</string>
    <string name="menu">Menu</string>
    <string name="step_2">STEP 2</string>
    <string name="when_are_you_planning">When are you planning?</string>
    <string name="date">Date</string>
    <string name="select_date">Select date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="Continue">Continue</string>
    <string name="your_perfect_itinerary">Your Perfect Itinerary</string>
    <string name="download">Download</string>
    <string name="edit">Edit</string>
    <string name="time">Time</string>
    <string name="cost">Total Cost</string>
    <string name="view_custom_itinerary">View Custom Itinerary</string>
    <string name="design_your_itinerary">Design Your Itinerary</string>
    <string name="select_one_activity_from_each_section_to_create_your_perfect_day">Select one activity from each section to create your perfect day.</string>
    <string name="_1">1</string>
    <string name="first_activity">First Activity</string>
    <string name="price">Price</string>
    <string name="duration">Duration</string>
    <string name="location">Location</string>
    <string name="select_activity">Select Activity</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="selected">Selected</string>
    <string name="romantic_plans_for_two">Romantic plans for two</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Drawer Open\n</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="create_plan_activity_button">Create Plan Activity Button</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>